# gpu-magma

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_full.py
examples/: ld_decay_example.py  quickstart_synthetic.py
gpu_magma/: __init__.py  _core.py  annotate.py  gene_test.py  ld.py  ld_decay.py  ld_real.py
tests/: conftest.py  test_annotate.py  test_core.py  test_device.py  test_gene_test.py  test_ld.py  test_ld_decay.py
