[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gpu-magma"
version = "0.1.0"
description = "GPU-accelerated gene-level association testing for GWAS summary statistics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "SysCallAI", email = "hello@syscallai.com"},
]
keywords = ["gwas", "magma", "gpu", "genomics", "gene-level-analysis", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
plink = ["pandas-plink>=2.0"]
all = ["pandas-plink>=2.0", "requests>=2.28", "huggingface-hub>=0.20"]

[project.urls]
Homepage = "https://github.com/SysCallAI/gpu-magma"
Repository = "https://github.com/SysCallAI/gpu-magma"
Issues = "https://github.com/SysCallAI/gpu-magma/issues"

[tool.setuptools.packages.find]
include = ["gpu_magma*"]
